--- a/src/@lekoarts/gatsby-theme-emilia/texts/about-me.mdx
+++ b/src/@lekoarts/gatsby-theme-emilia/texts/about-me.mdx
@@ -1,3 +1,2 @@
-## About Me
-
+## About Me regresi1
 Hi, thanks for using the theme! You can find more themes at [themes.lekoarts.de](https://themes.lekoarts.de) and visit my [personal website](https://www.lekoarts.de) to learn more about Gatsby. Minimalistic portfolio/photography site with masonry grid, page transitions and big images. Themeable with Theme UI.
