--- a/src/@lekoarts/gatsby-theme-emilia/texts/about-me.mdx
+++ b/src/@lekoarts/gatsby-theme-emilia/texts/about-me.mdx
@@ -1,2 +1,2 @@
-## About Me emilia github-220524-b
+## About Me emilia github-220525-test
 Hi, thanks for using the theme! You can find more themes at [themes.lekoarts.de](https://themes.lekoarts.de) and visit my [personal website](https://www.lekoarts.de) to learn more about Gatsby. Minimalistic portfolio/photography site with masonry grid, page transitions and big images. Themeable with Theme UI.
